# exbytes

./: .rustfmt.toml  AGENTS.md  Cargo.toml  README.md  target
.github/: renovate.json
.github/workflows/: release.yml
src/: lib.rs
tests/: var.rs
